# Calculate

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  conanfile.py  copying  patch.diff  readme.md
binding/fortran/: CMakeLists.txt
binding/fortran/future/: calculate.f90  wrapper.f90
binding/fortran/modules/: calculate.f08  calculate.f90
binding/fortran/source/: calculate.f90  wrapper.f08  wrapper.f90
binding/python/: CMakeLists.txt  setup.py
binding/python/calculate/: __init__.py  __init__.py.in  calculate.py  cffiwrap.py  exceptions.py  utility.py
binding/python/recipe/: bld.bat  meta.yaml  meta.yaml.in
concepts/: regex.ipynb
example/: CMakeLists.txt  calc.c  calc.cpp  calc.f90  calc.py  calculate.cpp  conanfile.txt  test.cpp
example/source/: calculate.cpp
examples/: calc.c  calc.cpp  calc.f90  calc.py
include/: calculate.h  calculate.hpp  symbols.h  symbols.hpp
include/calculate/: binding.h  c-interface.h  container.hpp  definitions.hpp  exception.hpp  exceptions.hpp  info.h  info.hpp  lexer.hpp  meta.hpp  node.hpp  parser.hpp  symbol.hpp  symbols.hpp  util.hpp  wrapper.hpp
patch/: gfortran.patch  icpc.patch  msvc.patch  vartemp.patch
resource/: version.rc  version.rc.in
source/: binding.cpp  c-interface.cpp  calculate.cpp  symbols.cpp
src/: calculate.cpp  symbols.cpp
template/: 0_catch.cpp.in  __init__.py.in  info.hpp.in  meta.yaml.in  version.rc.in
test/: 0_catch.cpp  1_expressions.cpp  2_constants.cpp  3_operators.cpp  4_functions.cpp  5_variables.cpp  6_parsing.cpp  7_binding.cpp  CMakeLists.txt  catch.cpp  conanfile.txt  lexer.cpp  parser.cpp  test.c  test.cpp  test0.c  test1.cpp  test2.cpp
test/source/: parser.cpp  symbol.cpp  wrapper.cpp
tests/: 0_catch.cpp  1_expressions.cpp  2_constants.cpp  3_operators.cpp  4_functions.cpp  5_variables.cpp  6_binding.cpp  6_c-interface.cpp  7_binding.cpp  constants.cpp
